--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "effector-react": "^23.2.0",
     "patronum": "^2.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.0",
@@ -26,7 +27,13 @@
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
+    "msw": "^2.2.3",
     "typescript": "^5.4.2",
     "vite": "^5.1.5"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
