--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     "@rollup/plugin-babel": "^6.0.4",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@typescript-eslint/utils": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-effector": "^0.13.0",
     "msw": "^2.2.3",
     "typescript": "^5.4.2",
     "vite": "^5.1.5"
